--- a/client/package.json
+++ b/client/package.json
@@ -2,33 +2,27 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001/",
+  "proxy": {
+    "/api/*": {
+      "target": "http://localhost:3001"
+    }
+  },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-dropzone": "^6.0.2",
+    "react-dropzone": "^6.0.0",
     "react-image-crop": "^6.0.0",
     "react-lazyload": "^2.3.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.4",
+    "react-scripts": "1.1.5",
     "reactstrap": "^6.5.0",
     "sfcookies": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "main": "index.js",
-  "license": "MIT"
+  }
 }
