--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.3.1",
     "multer": "^1.4.0",
-    "multer-gridfs-storage": "^3.2.3"
+    "multer-gridfs-storage": "^3.2.3",
+    "react-anchor-link-smooth-scroll": "^1.0.11"
   }
 }
